--- a/build.gradle
+++ b/build.gradle
@@ -24,18 +24,39 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.springframework.batch:spring-batch-integration' // AsyncItemProcessor, AsyncItemWriter
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor" // @ConfigurationProperties
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// db
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// mapstruct
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+	// hibernate-types
+	implementation 'com.vladmihalcea:hibernate-types-52:2.19.2'
+
+	// csv
+	implementation 'com.opencsv:opencsv:5.7.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
 
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	testImplementation 'org.apache.commons:commons-lang3:3.12.0'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
