--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
 	// hibernate-types
-	implementation 'com.vladmihalcea:hibernate-types-52:2.21.1'
+	//implementation 'com.vladmihalcea:hibernate-types-52:2.21.1'
 
 	// csv
 	implementation 'com.opencsv:opencsv:5.7.0'
@@ -62,6 +62,7 @@ dependencies {
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+
 }
 
 tasks.named('bootBuildImage') {
